styles/Home.module.css
@value base-background: #eaeae8;
@value alt-background: #dddddd;
@value main-text: #212b2f;
@value main-text-secondary: #113333;
@value accent: #bb5e08;

@value base-background-dark: #212b2f;
@value alt-background-dark: #121b1f;
@value main-text-dark: #eaeae8;
@value main-text-secondary-dark: #dddddd;
@value accent-dark: #fc8211;

.container {
  min-height: 100vh;
  padding: 0 2rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background: linear-gradient(10deg, alt-background, base-background);
}

.main {
  padding: 5rem 0;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  color: main-text;
  font-family: neue-haas-grotesk-display,sans-serif;
  font-weight: 400;
  font-style: normal;
  max-width: 800px;

}

.footer {
  width: 100%;
  height: 100px;
  border-top: 1px solid main-text;
  display: flex;
  justify-content: center;
  align-items: center;
  color: main-text;
}

.footer svg {
  padding: 0 0.5rem;
}

.footer a {
  display: flex;
  justify-content: center;
  align-items: center;
}

.footer a:hover {
  color: accent;
}

.title a {
  text-decoration: none;
}

.title a:hover,
.title a:focus,
.title a:active {
  text-decoration: underline;
}

.title {
  margin: 0;
  line-height: 1.15;
  font-size: 4rem;
  position: relative;
}

.title:after {
  content: '';
  width: 4rem;
  height: 0.25rem;
  background: main-text;
  position: absolute;
  bottom: -1rem;
  left: 0;
}

.title,
.description {
  text-align: left;
}

.description {
  line-height: 1.5;
  font-size: 1.5rem;
  font-family: neue-haas-grotesk-display,sans-serif;
  font-weight: 400;
  font-style: normal;
  word-spacing: 0.15rem;
  margin: 2rem 0 0;
}

.description > a {
  border-bottom: 1px solid main-text;
}

.description > a:hover {
  color: accent;
  border-bottom-color: accent;
}

.code {
  background: #fafafa;
  border-radius: 5px;
  padding: 0.75rem;
  font-size: 1.1rem;
  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
    Bitstream Vera Sans Mono, Courier New, monospace;
}

.grid {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;

  max-width: 800px;
  margin-top: 3rem;
}

.list {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  
  max-width: 800px;
  margin-top: 3rem;
}

.card {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  margin: 1rem;
  flex-basis: 45%;
  width: 100%;
  text-align: left;
  color: inherit;
  text-decoration: none;
  font-family: neue-haas-grotesk-text, sans-serif;
  font-weight: 400;
  font-style: normal;
  fill: text-main;
}

.card:hover,
.card:focus,
.card:active {
  color: accent;
  fill: accent;
}

.card h3 {
  margin: 0 0 1rem 0;
  font-size: 1.5rem;
  font-weight: 500;
  position: relative;
}

.card .partialDivider {
  width: 2rem;
  height: 0.15rem;
}

.card h3:after {
  content: '';
  width: 2rem;
  height: 0.15rem;
  background: main-text;
  position: absolute;
  bottom: -0.5rem;
  left: 0.05rem;
}

.card:hover h3:after {
  background: accent;
}

.card p {
  margin: 0;
  font-size: 1.25rem;
  line-height: 1.5rem;
  font-weight: 400;
}

.card .cardIcon {
  font-size: 2rem;
  padding: 0 0 0 1rem;
}

.cardIcon svg { 
  height: 1rem;
}

.logo {
  height: 1.5rem;
}

@media (prefers-color-scheme: dark) {
  .container {
    background: linear-gradient(10deg, alt-background-dark, base-background-dark);
  }

  .main {
    color: main-text-dark;
  }

  .description > a {
    border-bottom: 1px solid main-text-dark;
  }
  
  .description > a:hover {
    color: accent-dark;
    border-bottom-color: accent-dark;
  }

  .title:after {
    background: main-text-dark ;
  }

  .footer {
    color: main-text-dark;
    border-top: 1px solid main-text-dark;
  }

  .footer a:hover {
    color: accent-dark;
  }

  .card:hover,
  .card:focus,
  .card:active {
    color: accent-dark;
    fill: accent-dark;
  }

  .card h3:after {
    background: main-text-dark;
  }

  .card:hover h3:after {
    background: accent-dark;
  }
}

@media (max-width: 600px) {
  .grid {
    width: 100%;
    flex-direction: column;
  }


  .description {
    padding: 0.8rem 0 0 0;
    font-size: 1.25rem;
  }


  .card h3 {
    font-size: 1.25rem;
  }

  .card p {
    font-size: 1.1rem;
  }

  .list {
    margin: 1rem 0 0;
  }
}

